[project]
name = "aiorocket"
version = "dev-2.0.0"
description = "Async Python SDK for TON Rocket"
license = {file = "LICENSE"}
requires-python = ">=3.7"
readme = "README.md"
dependencies = [
    "aiohttp"
]
authors = [
    {name = "Sovenok-Hacker", email = "artemka.hvostov@yandex.ru"},
    {name = "RimMirK", email = "me@RimMirK.pp.ua"},
]
keywords = ["ton", "rocket", "sdk", "async", "the open network", "bot", "telegram", "crypto", "cryptocurrency", "xRocket"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
homepage = "https://github.com/RimMirK/aiorocket"
repository = "https://github.com/RimMirK/aiorocket.git"
MainnetBot = "https://t.me/xRocket"
TestnetBot = "https://t.me/xrocket_testnet_bot"
Creator = "https://t.me/RimMirK"